# siilena

./: .gitignore  LICENSE  README.md  README.org
.ccls-cache/@@home@plunne@siilena/: @usr@include@alloca.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h  @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  @usr@include@x86_64-linux-gnu@bits@select.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdio_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@stdlib-float.h.blob  @usr@include@x86_64-linux-gnu@bits@struct_mutex.h.blob  @usr@include@x86_64-linux-gnu@bits@struct_rwlock.h.blob  @usr@include@x86_64-linux-gnu@bits@thread-shared-types.h.blob  @usr@include@x86_64-linux-gnu@bits@time64.h.blob  @usr@include@x86_64-linux-gnu@bits@timesize.h.blob  @usr@include@x86_64-linux-gnu@bits@types.h.blob  @usr@include@x86_64-linux-gnu@bits@types@FILE.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__FILE.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__fpos64_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__fpos_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__mbstate_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@__sigset_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@clock_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@clockid_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@sigset_t.h.blob  @usr@include@x86_64-linux-gnu@bits@types@struct_FILE.h.blob  @usr@include@x86_64-linux-gnu@bits@types@struct_timespec.h.blob  @usr@include@x86_64-linux-gnu@bits@types@struct_timeval.h.blob  (+14 more)
.ccls-cache/@home@plunne@siilena/: C@Exo@HelloWorld@Recurrence.c.blob
ADA/: README.md
ADA/Exo/Exercice1/: exo1.gpr
ADA/Exo/Exercice1/src/: libcompany.adb  libcompany.ads  main.adb
ASM/: ASM.md  Exercices.md  README.md
Aeronautique/: ATA34.md  AeroVol.md
Automobile/: Auto.md  Design_Modes.md  TI_Modes.md  TV_Modes.md
Automobile/CycleV/: README.md
Automobile/CycleV/STMPROJECT/: Design_General.md  Design_Modes.md  Design_Timer.md  Specification.md  TI_Modes.md
C/Cours/: #Cours1.org#  .#Cours1.org  ASCII_Extended_Markdown.md  Arguments.md  Compilation.md  Cours.md  Cours1.md  Cours1.org  Cours2.md  Questionnaire.md  Questionnaire.org  README.md  README.org  RTOS.md  STM32.md  Tests.md  UART.md
C/Exo/ASCII_to_Markdown/: ASCII_Table.md  ASCII_Table2.md  ASCII_to_Markdown  ASCII_to_Markdown.c
C/Exo/Algorithmie/: Algorithmie1_Bases.c  Algorithmie2_Avancee_Decrementation.c  Algorithmie3_Avancee_ForEach1_ValeurCommune.c  Algorithmie3_Avancee_ForEach2_ValeurNonCommune.c  Algorithmie3_Avancee_ForEach3_ValeurNonCommuneATableauDynamique_ByLena.c  Algorithmie4_Avancee_RandomParite.c  Algorithmie5_Avancee_MaxMinMoyenne.c  Algorithmie6_Avancee_FonctionDecalage.c
C/Exo/Calculatrice2/: CMakeLists.txt  main.c
C/Exo/Calculatrice2/includes/: calcarith.h  calccmp.h  calcio.h  calclib.h  calcope.h
C/Exo/Calculatrice2/src/: calcarith.c  calccmp.c  calcio.c  calclib.c  calcope.c
C/Exo/Carnet/: CMakeLists.txt  main.c
C/Exo/Carnet/includes/: carnet.h  carnet_init.h
C/Exo/Carnet/src/: carnet.c  carnet_init.c
C/Exo/Compilation/: CMakeLists.txt  HelloWorld.c  test.c  test.h
C/Exo/HelloWorld/: ASCII.c  CLI.c  CMakeLists.txt  Comparaison.c  Condition.c  DevinerNombre.c  DoWhile.c  Fonctions.c  ForRectangle.c  HelloWorld.c  MatriceLED.c  MatriceLED3.c  ParametreArgument.c  PointeursTableaux  PointeursTableaux.c  Recurrence.c  RenderingEngine.c  TroisTableaux.c  While.c
C/Exo/Miniprojet/TP1_Partie_sur_PC/morse_pc/: CMakeLists.txt  Makefile  README.md  main.c
C/Exo/Miniprojet/TP1_Partie_sur_PC/morse_pc/includes/: morse_audio.h  morse_beep.h  morse_code.h  morselib.h
C/Exo/Miniprojet/TP1_Partie_sur_PC/morse_pc/src/: morse_audio.c  morse_beep.c  morse_code.c
C/Exo/Miniprojet/TP1_Partie_sur_PC/morse_pc/tmp/: Init_UART.c  beep_message.c  morse.c
C/Exo/Pendu/: CMakeLists.txt  PenduList.txt  TODO.md  main.c
C/Exo/Pendu/includes/: pendu.h  penducheck.h  pendudraw.h  pendufile.h  penduinit.h  penduio.h
C/Exo/Pendu/src/: pendu.c  penducheck.c  pendudraw.c  pendufile.c  penduinit.c  penduio.c
C/Exo/STM32F103RB/PlatformIO/TestBlink/: CMakeLists.txt
C/Exo/STM32F103RB/PlatformIO/TestBlink/include/: STM32F103_TestDriver.h  lsl_display.h  lsl_pinouts.h
C/Exo/STM32F103RB/PlatformIO/TestBlink/src/: lsl_delay.c  lsl_init_regs.c  lsl_pinouts.c
C/Exo/STM32F103RB/PlatformIO/TestBlink/test/: CMakeLists.txt  lsl_pinouts_test.cpp
C/Exo/Structures/: CMakeLists.txt  main.c
C/Exo/Structures2/: CMakeLists.txt  main.c
C/Exo/Structures2/includes/: structures.h
C/Exo/Structures2/src/: structures.c
C/Exo/System/: CMakeLists.txt  main.c
C/Exo/Tests/SaltInBank/test/: CMakeLists.txt  account_test.cpp  bank_test.cpp  user_test.cpp
C/Exo/Triage/: CMakeLists.txt  main.c
C/Exo/VariableArgs/: CMakeLists.txt  main.c
C/Exo/VariableArgs/includes/: varArgs.h
C/Exo/VariableArgs/src/: varArgs.c
C/Memo/: Memo1_FormattageDeChaines.c  Memo2_Types.c
Git/: README.md  README.org
Linux/: README.md
Protocoles/: CAN.md  ETHERNET.md  Introduction.md  Serial.md  UART.c  UART_I2C.md
Qualite/: Qualite.md
SII/: RelClient.md
Scripting/: Python.md  README.md  Scripting.md  script.py
Scripting/Python/Exo/: copie_recursive.py  photo_move.py  xml.py
Scripting/Shell/: Shell.md
Scripting/Shell/Exo/: photo_move.sh
Xml/: README.md
(+51 files in other folders)
