cmake_minimum_required(VERSION 3.14)

project(Projet_Langage_C)

set(CMAKE_C_STANDARD 11)

add_executable(HelloWorld HelloWorld.c)
add_executable(Condition Condition.c)
add_executable(Comparaison Comparaison.c)
add_executable(DevinerNombre DevinerNombre.c)
add_executable(Fonctions Fonctions.c)
add_executable(ParametreArgument ParametreArgument.c)
add_executable(ForRectangle ForRectangle.c)